# medsymbol

./: .gitignore  ARCHITECTURE_DIAGRAM.md  COLAB_SETUP.md  DIAGRAMS_README.md  Dockerfile  INFERENCE_WORKFLOW_DIAGRAM.md  MedSymbol_Colab_Setup.ipynb  ONTOLOGY_MASKING_DIAGRAM.md  PROJECT_PLANS.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
data/ontology/: icd11_medsymbol_codes.json
scripts/: api.py  download_datasets.py  evaluate_model.py  explore_nih_data.py  inference.py  integration_test.py  orchestrate.py  setup_kaggle.py  test_icd11_api.py  train_model.py  verify_env.py  visualize.py
src/: __init__.py  clinical_documentation.py  clinical_support.py  error_handling.py  evaluation.py  model.py  optimization.py  production.py  uncertainty.py
src/encoders/: __init__.py  fusion.py  history.py  multimodal.py  tabular.py  text.py  vision.py
src/medsymbol.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/symbolic/: __init__.py  constraints.py  disease_ontology.py  masking.py  proofs.py  rule_engine.py  verifier.py
src/utils/: __init__.py  data_loader.py
tests/: test_all.py  test_constraints.py  test_masking.py  test_verifier.py
