[project]
name = "medsymbol"
version = "0.1.0"
description = "MedSymbol: A Neuro-Symbolic Framework for Verifiably Consistent Medical Diagnosis"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Deep Learning
    "torch>=2.0",
    "torchvision>=0.15",
    "transformers>=4.30",
    "pytorch-tabnet>=4.0",

    # Medical Imaging
    "pydicom>=2.4",
    "Pillow>=10.0",

    # Ontology & Symbolic Reasoning
    "owlready2>=0.40",
    "z3-solver>=4.12",

    # Data Processing
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",

    # Visualization
    "matplotlib>=3.7",
    "seaborn>=0.12",

    # Experiment Tracking
    "wandb>=0.15",

    # Utilities
    "tqdm>=4.65",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
    "ipykernel>=6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
